feat: v2 script.js + v1 index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         <h1>Shifumi</h1>
     </header>
     <main>
+        <div id="choix">
+            <button onClick='jouer("Pierre")'> Pierre </button>
+            <button onClick='jouer("Feuille")'> Feuille </button>
+            <button onClick='jouer("Ciseau")'> Ciseau </button>
+        </div>
+        <div id="resultat"></div>
+        <div id="score">
+            <p>Score Joueur: <span id="score-joueur">0</span></p>
+            <p>Score Ordinateur: <span id="score-ordinateur">0</span></p>
+            <p>Match Nul: <span id="score-nul">0</span></p>
+            <p>Total Parties: <span id="nombre-matches">0</span></p>
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 Affholder Quentin.</p>
