--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A basic HTML skeleton">
-    <meta name="author" content="Your Name">
-    <title>Document</title>
+    <meta name="description" content="Jeu de Shifumi">
+    <meta name="author" content="Affholder Quentin">
+    <title>Shifumi</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -18,12 +18,16 @@
             <button onClick='jouer("Feuille")'> Feuille </button>
             <button onClick='jouer("Ciseau")'> Ciseau </button>
         </div>
-        <div id="resultat"></div>
         <div id="score">
             <p>Score Joueur: <span id="score-joueur">0</span></p>
             <p>Score Ordinateur: <span id="score-ordinateur">0</span></p>
             <p>Match Nul: <span id="score-nul">0</span></p>
+        </div>
+        <div id="historique">
             <p>Total Parties: <span id="nombre-matches">0</span></p>
+        </div>
+        <div id ="restart">
+            <button onClick = 'restartGame()'> Reintialiser </button>
         </div>
     </main>
     <footer>
